easy-gifts/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: easy-gifts
  namespace: dev
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dontgetthemsocks.com.au
    secretName: easy-gift-tls
  rules:
    - host: dontgetthemsocks.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eg-website-static
                port:
                  number: 80
    - host: dontgetthemsocks.com.au
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eg-website-api
                port:
                  number: 8080
